test/zinc_source/compile_errors/decorators/12_enum_unsupported.zn
// expected-error: enum decorator support is not implemented yet: 'Mode'
@tag
enum Mode {
    On
    Off
}

fn main() {
    print(1)
}
